<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


<ImageView
    android:layout_marginTop="@dimen/marginBase"
    android:src="@drawable/calculator"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/tamanioImagen">
    </ImageView>

    <LinearLayout
        android:layout_marginTop="@dimen/marginBase"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/n1"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textSize="@dimen/tamanioLetra"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/n1Txt"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/tamanioLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/marginBase"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/n2"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textSize="@dimen/tamanioLetra"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/n2Txt"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/tamanioLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </LinearLayout>
<LinearLayout
    android:layout_marginTop="@dimen/marginBase2"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <Button
        android:onClick="sumar"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="@color/colorSuma"
        android:textSize="@dimen/tamanioLetra"
        android:layout_height="@dimen/tamanioBtn"
        android:text="@string/sumarText">

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_weight="1"
android:onClick="restar"
        android:background="@color/colorResta"
        android:text="@string/restaText"
        android:textSize="@dimen/tamanioLetra"
        android:layout_height="@dimen/tamanioBtn"></Button>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:onClick="multiplicar"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@color/colorMulti"
            android:text="@string/multiText"
            android:textSize="@dimen/tamanioLetra"
            android:layout_height="@dimen/tamanioBtn">

        </Button>
        <Button
            android:onClick="dividir"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@color/colorDivision"
            android:text="@string/divText"
            android:textSize="@dimen/tamanioLetra"
            android:layout_height="@dimen/tamanioBtn">

        </Button>

    </LinearLayout>

</LinearLayout>